--- a/src/components/Layout/Navbar/Navbar.module.css
+++ b/src/components/Layout/Navbar/Navbar.module.css
@@ -49,7 +49,7 @@
   background: #103755;
 }
 
-.shop {
+.shop a{
   color: #63766b;
   display: flex;
   align-items: center;
@@ -62,14 +62,14 @@
 
 .shop p {
   font-size: 1rem;
-  margin-left: 10px;
+  margin: 0px 10px;
   z-index: 10;
 }
 
 .shop span {
   position: absolute;
   right: -15px;
-  top: 5px;
+  top: -10px;
   background-color: #eeb808;
   width: 20px;
   height: 20px;
